--- a/csharp-oracle-udt/csharp-oracle-udt.csproj
+++ b/csharp-oracle-udt/csharp-oracle-udt.csproj
@@ -93,6 +93,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="odbc.zip" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -104,6 +105,13 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="UDT\TYPE_DDL\DDL.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="oci.dll" />
+    <Content Include="ociw32.dll" />
+    <Content Include="Oracle.DataAccess.dll" />
+    <Content Include="oraociei11.dll" />
+    <Content Include="OraOps11w.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
